--- a/Fronted/src/index.html
+++ b/Fronted/src/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <script src="https://kit.fontawesome.com/a0ff895d56.js"></script>
   <app-root></app-root>
 </body>
 </html>
